fix: add z-index dropdown

--- a/src/output.css
+++ b/src/output.css
@@ -805,6 +805,10 @@ select {
   right: 1rem;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
